# susolv2

./: .gitignore  CMakeLists.txt  readme.md
boards/: euler96-29.txt
include/susolv/: board.h  cellIndexLookup.h  euler96.h
src/: board.cpp  euler96.cpp  susolv.cpp
test/: hello_test.cpp
